# nao

./: .gitignore  CMakeLists.txt  NAO_1280x960.yaml  NAO_640x480.yaml  config.py  controller.py  imu_streamer.py  mono_inertial_nao.cc  mono_nao.cc  mono_nao_control.cc  robot_streamer.py  run_slam.sh  run_slam_and_control.sh  run_slam_with_control.sh  slam_controller.py  view_fast.py
